--- a/index.html
+++ b/index.html
@@ -53,24 +53,24 @@
     </div>
 <div style="max-width: 100vw; overflow: hidden;">
     <div class="article-tile-row" style=" display: flex; flex-direction: row; margin: auto; max-width: 2800px; justify-content: center; margin-top: 5rem;">
-        <a href="https://grumqy.github.io/fangea/wiki/nadmorze/">
+        <a href="https://grumqy.github.io/fangea/wiki/halandia/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Nadmorze, Republika Nadmorska, Wielka Republika Nadmorska (WRN) - Państwo unitarne w Fangei Wschodniej, położone na wyspach oraz nad wschodnim wybrzeżem Fangei nad Oceanem Koralowym. Posiada terytoria zamorskie. Od północy Nadmorze graniczy z Pampersią, od zachodu z Pampersią oraz Stanami Zjednoczonymi Fangei Południowej. Od zachodniej strony terytorium Jarpersi graniczy z Unforgivią, od zachodniej strony terytorium Naziemia graniczy z Montecydją. Większość wschodniej granicy Nadmorza wyznacza wybrzeże Oceanu Koralowego. Nadmorska Wyłączna Strefa Ekonomiczna na Oceanie Koralowym graniczy ze strefą USF, zaś na Oceanie Północnym ze Strefami Pampersii, USF oraz Iznotii.</span></div>
-                    <img src="https://i.ibb.co/172NNM4/rnflaga.png">
+                    <div class="article-tile-text"><span>Halandia, Halandzka Republika Demokratyczna (duń. Halland, Den Halandiske Demokratiske Republik).</span></div>
+                    <img src="https://i.ibb.co/jV4cCTz/halandia.webp">
                 </div>
-                <div class="article-tile-description">Nadmorze</div>
+                <div class="article-tile-description">Halandia</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/disco_babushka/">
+        <a href="https://grumqy.github.io/fangea/wiki/ergonbud/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Była prezydent Pieczarii (ur. 1926 w wiosce Jandyna, zm. 2023 w Pieczarkowie), założycielka firmy DiscoBabushkaInternaszionalSklepiki oraz celebrytka znana ze swych kas fiskalnych. Do dziś niewiele informacji zachowało się z dzieciństwa i młodości Joanny Świtek, głównie ze względu na brak poruszania tego tematu przez Disco Babushkę za życia oraz ze względu na zagubienie źródeł w czasie przeprowadzki rodziny do Iznotii.</span></div>
-                    <img src="https://i.ibb.co/6DL08Wq/obraz-2024-04-21-144102562.png">
+                    <div class="article-tile-text"><span>Ergonbud International – lemburska spółka budowlana z siedzibą w Vounarii (wcześniej w Eleii w Lemburgu), notowana na Vounaria Chrematistirio. Ergonbud zostało założone w 1891 roku przez Stavrosa Ergoniou w Lemburgu. Początkowo firma rozpoczęła działalność jako lokalne przedsiębiorstwo budowlane, specjalizując się głównie w budowie domów mieszkalnych i mniejszych obiektów komercyjnych.</span></div>
+                    <img src="https://i.ibb.co/y5Jb3mR/ergonbud.png">
                 </div>
-                <div class="article-tile-description">Joanna „Disco Babushka” Świtek</div>
+                <div class="article-tile-description">Ergonbud</div>
             </div>
             </a>
         <a href="https://grumqy.github.io/fangea/wiki/port_złotice/">
@@ -107,10 +107,10 @@
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Zbiór poglądów politycznych będący połączeniem skrajnego liberalizmu w gospodarce i tradycjonalizmu w kwestiach społeczno-obyczajowych i politycznych, a także ustrojowych. Jest on powszechnie uważany za konserwatywną odmianę anarchokapitalizmu. Richteryści opowiadają się za wprowadzeniem monarchii oraz zniesieniem demokracji.</span></div>
-                    <img src="https://i.ibb.co/QFdcFZb/obraz-2024-06-01-211200049.png">
+                    <div class="article-tile-text"><span>Stany Zjednoczone Fangei, Stany Zjednoczone, potocznie Sudfangea.</span></div>
+                    <img src="https://i.ibb.co/mt6jZkJ/usf-flaga.webp">
                 </div>
-                <div class="article-tile-description">Richteryzm</div>
+                <div class="article-tile-description">Stany Zjednoczone</div>
             </div>
         </a>
     </div>
@@ -125,54 +125,54 @@
                 <div class="article-tile-description">Nadmorze</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/disco_babushka/">
+        <a href="https://grumqy.github.io/fangea/wiki/shot_paste/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Była prezydent Pieczarii (ur. 1926 w wiosce Jandyna, zm. 2023 w Pieczarkowie), założycielka firmy DiscoBabushkaInternaszionalSklepiki oraz celebrytka znana ze swych kas fiskalnych. Do dziś niewiele informacji zachowało się z dzieciństwa i młodości Joanny Świtek, głównie ze względu na brak poruszania tego tematu przez Disco Babushkę za życia oraz ze względu na zagubienie źródeł w czasie przeprowadzki rodziny do Iznotii.</span></div>
-                    <img src="https://i.ibb.co/6DL08Wq/obraz-2024-04-21-144102562.png">
+                    <div class="article-tile-text"><span>Shot Paste (właściwie Craig Response LLC.) – sudfangejskie przedsiębiorstwo chemiczne z siedzibą w Palm Beach w stanie Olympia, założone w 2009 roku. W 2016 roku firma zatrudniała około 120 osób. Założycielem i obecnym prezesem firmy jest Franklin Craig. Firma stała się popularnym memem internetowym ze względu na swoje niecodzienne reklamy, w których występuje sam jej założyciel prezentując swoje produkty w nietypowych sytuacjach (np. zbudowanie łodzi z pasty Shot Paste).</span></div>
+                    <img src="https://i.ibb.co/x23Pzg1/sp.png">
                 </div>
-                <div class="article-tile-description">Joanna „Disco Babushka” Świtek</div>
+                <div class="article-tile-description">Shot Paste</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/pampersia/">
+        <a href="https://grumqy.github.io/fangea/wiki/pamercja/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Pampersia, Rzeczpospolita Pampersia (RP) - Państwo unitarne w Fangei Środkowej. Położone między Morzem Pamperskim na północy a rzeką XYZ na południu, w przeważającej części w dorzeczu Ostry. Od wschodu graniczy z WRN a od południa z USF. Większość północnej granicy Pampersii wyznacza wybrzeże Morza Pamperskiego. Pamperska Wyłączna Strefa Ekonomiczna na Morzu Pamperskim graniczy ze strefami WRN oraz USF.</span></div>
-                    <img src="https://i.ibb.co/bJFhJjH/pampersia.png">
+                    <div class="article-tile-text"><span>Pamercja, Rzeczpospolita Pamercja (RP).</span></div>
+                    <img src="https://i.ibb.co/8gpD5Hy/flaga-pamercji.webp">
                 </div>
-                <div class="article-tile-description">Pampersia</div>
+                <div class="article-tile-description">Pamercja</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/andannajwa_lidi/">
+        <a href="https://grumqy.github.io/fangea/wiki/nowy_tuhalf/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <img src="https://i.ibb.co/hyvLCMj/sadfs.webp">
-                    <div class="article-tile-text"><span>Andannajwa Lidi (pol. Wolne Ludy) – nieistniejąca organizacja separatystyczna działająca w 2023 roku na terenie Nowej Łodyczej, założona przez rdzenną ludność miasta w celu utworzenia państwa niezależnego od Pieczarii. Organizacja jest uznawana za terrorystyczną ze względu na przeprowadzone mordy na mieszkańcach Nowej Łodyczej w czasie powstania w mieście.</span></div>
+                    <img src="https://i.ibb.co/KzT7Pb9/KNT.webp">
+                    <div class="article-tile-text"><span>Nowy Tuhalf, Księstwo Nowego Tuhalfu (słoweń. Novi Tuhalf, Kneževina novega Tuhalfa).</span></div>
                 </div>
-                <div class="article-tile-description">Andannajwa Lidi</div>
+                <div class="article-tile-description">Nowy Tuhalf</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/montecydia/">
+        <a href="https://grumqy.github.io/fangea/wiki/powstanie_ekwalijskie/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Montezerisch, Montezerische Eidgenossenschaft, Konfederacja Montecydyjska - państwo federacyjne położone w Fangeii Zachodniej. Jest jednym z niewielu państw, w których obowiązują szeroko stosowane formy demokracji bezpośredniej. Montecydja do Bractwa Narodów przystąpiła dopiero 6 grudnia 2023 po przegłosowaniu tej decyzji w referendum minimalną większością 54% głosów.</span></div>
-                    <img src="https://i.ibb.co/Fhvtg3R/montecydja-flaga.png">
+                    <div class="article-tile-text"><span>Powstanie Ekwalijskie (1879-1882) – Zryw zbrojny mający miejsce w Ekwalii od 16 września 1879 roku do 20 kwietnia 1882 roku. Wojna ta zasłynęła wśród historyków jako jedna z „najbardziej interesujących i najbardziej krwawych” wojen w historii Maurazji. Była to także druga wojna, w której wojsko Stanów Zjednoczonych Fangei używało dynamitu do akcji dywersyjnych na szerszą skale.</span></div>
+                    <img src="https://i.ibb.co/7JHp6Wh/zd.png">
                 </div>
-                <div class="article-tile-description">Montecydia</div>
+                <div class="article-tile-description">Powstanie Ekwalijskie</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/ajjbdalizm_religia/">
+        <a href="https://grumqy.github.io/fangea/wiki/mistrzostwa_fangei_w_piłce_nożnej_2024/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Zbiór poglądów politycznych będący połączeniem skrajnego liberalizmu w gospodarce i tradycjonalizmu w kwestiach społeczno-obyczajowych i politycznych, a także ustrojowych. Jest on powszechnie uważany za konserwatywną odmianę anarchokapitalizmu. Richteryści opowiadają się za wprowadzeniem monarchii oraz zniesieniem demokracji.</span></div>
-                    <img src="https://i.ibb.co/ZgxTdVV/obraz-2024-04-24-183305454.png">
+                    <div class="article-tile-text"><span>Mistrzostwa Fangei w Piłce Nożnej 2024 dwudziesty pierwszy turniej o mistrzostwo Fangei w piłce nożnej mężczyzn. Gospodarzem turnieju, po raz czwarty w historii, będzie Sudfangea – w przeszłości, mistrzostwa w 1961 oraz 2001 roku rozgrywały się na terenie Sudfangei oraz cztery mecze Pucharu Fangei 2021 były rozgrywane w Rockford. Turniej odbędzie się na 5 stadionach w 4 różnych miastach.</span></div>
+                    <img src="https://i.ibb.co/F0rnbJ5/xdbenc.png">
                 </div>
-                <div class="article-tile-description">Ajjbdalizm (religia)</div>
+                <div class="article-tile-description">Mistrzostwa Fangei w Piłce Nożnej 2024</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/nadmorze/">
@@ -187,14 +187,14 @@
         </a>
     </div>
     <div class="article-tile-row" style=" display: flex; flex-direction: row; margin: auto; max-width: 2800px; justify-content: center; margin-top: 1rem; padding-bottom: 1.75rem">
-        <a href="https://grumqy.github.io/fangea/wiki/nadmorze/">
+        <a href="https://grumqy.github.io/fangea/wiki/atidalia/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Nadmorze, Republika Nadmorska, Wielka Republika Nadmorska (WRN) - Państwo unitarne w Fangei Wschodniej, położone na wyspach oraz nad wschodnim wybrzeżem Fangei nad Oceanem Koralowym. Posiada terytoria zamorskie. Od północy Nadmorze graniczy z Pampersią, od zachodu z Pampersią oraz Stanami Zjednoczonymi Fangei Południowej. Od zachodniej strony terytorium Jarpersi graniczy z Unforgivią, od zachodniej strony terytorium Naziemia graniczy z Montecydją. Większość wschodniej granicy Nadmorza wyznacza wybrzeże Oceanu Koralowego. Nadmorska Wyłączna Strefa Ekonomiczna na Oceanie Koralowym graniczy ze strefą USF, zaś na Oceanie Północnym ze Strefami Pampersii, USF oraz Iznotii.</span></div>
-                    <img src="https://i.ibb.co/172NNM4/rnflaga.png">
+                    <div class="article-tile-text"><span>Atidalia, V Republika Atidalii (cz. Atidalie, V. republika Atidalie).</span></div>
+                    <img src="https://i.ibb.co/FDfyPy0/atidalia-flaga.webp">
                 </div>
-                <div class="article-tile-description">Nadmorze</div>
+                <div class="article-tile-description">Atidalia</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/disco_babushka/">
@@ -207,14 +207,14 @@
                 <div class="article-tile-description">Joanna „Disco Babushka” Świtek</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/łukasz_lukasox/">
+        <a href="https://grumqy.github.io/fangea/wiki/greenpay/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Łukasz Maksymilian Lukasox (ur. 26 czerwca 1956 w Pampersiu) - pamperski przedsiębiorca, osobowość telewizyjna oraz polityk, prezydent Pampersii w latach 2021-2023 2023-2025. W 1978 otrzymał dyplom z ekonomii na Pamperskim uniwersytecie ekonomii. W 1982 przejął rodzinną firmę Julet Lukasox & Son trudzącą się w przemyśle filmowym, zmieniając później jej nazwę na PF Films Organization. Podczas swojej kariery biznesowej z czasem otworzył się na rynek nieruchomości. </span></div>
-                    <img src="https://i.ibb.co/1z8jRGR/cipicpi.png">
+                    <div class="article-tile-text"><span>Greenpay Inc. – Lemburska spółka i organizacja członkowska zajmująca się wydawaniem kart płatniczych, powstała w 1961 roku pod nazwą Green Card. Greenpay Inc. zadebiutowała na Vounaria Chrematistirio w kwietniu 2006 roku. W październiku 2000 została natomiast wyodrębniona organizacja Greenpay Fangea, mająca charakter stowarzyszenia banków członkowskich i zachowująca wyłączną licencję na markę Greenpay na Fangei.</span></div>
+                    <img src="https://i.ibb.co/fxTTnsH/greenpay2.png">
                 </div>
-                <div class="article-tile-description">Łukasz Lukasox</div>
+                <div class="article-tile-description">Greenpay</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/cartland/">
