--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
                 <div class="article-tile-description">Halandia</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/ergonbud/">
+        <a href="https://grumqy.github.io/fangea/wiki/powstanie_ekwalijskie/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Ergonbud International – lemburska spółka budowlana z siedzibą w Vounarii (wcześniej w Eleii w Lemburgu), notowana na Vounaria Chrematistirio. Ergonbud zostało założone w 1891 roku przez Stavrosa Ergoniou w Lemburgu. Początkowo firma rozpoczęła działalność jako lokalne przedsiębiorstwo budowlane, specjalizując się głównie w budowie domów mieszkalnych i mniejszych obiektów komercyjnych.</span></div>
-                    <img src="https://i.ibb.co/y5Jb3mR/ergonbud.png">
+                    <div class="article-tile-text"><span>Powstanie Ekwalijskie (1879-1882) – Zryw zbrojny mający miejsce w Ekwalii od 16 września 1879 roku do 20 kwietnia 1882 roku. Wojna ta zasłynęła wśród historyków jako jedna z „najbardziej interesujących i najbardziej krwawych” wojen w historii Maurazji. Była to także druga wojna, w której wojsko Stanów Zjednoczonych Fangei używało dynamitu do akcji dywersyjnych na szerszą skale.</span></div>
+                    <img src="https://i.ibb.co/7JHp6Wh/zd.png">
                 </div>
-                <div class="article-tile-description">Ergonbud</div>
+                <div class="article-tile-description">Powstanie Ekwalijskie</div>
             </div>
-            </a>
+        </a>
         <a href="https://grumqy.github.io/fangea/wiki/port_złotice/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
@@ -197,14 +197,14 @@
                 <div class="article-tile-description">Atidalia</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/disco_babushka/">
+        <a href="https://grumqy.github.io/fangea/wiki/powstanie_ekwalijskie/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Była prezydent Pieczarii (ur. 1926 w wiosce Jandyna, zm. 2023 w Pieczarkowie), założycielka firmy DiscoBabushkaInternaszionalSklepiki oraz celebrytka znana ze swych kas fiskalnych. Do dziś niewiele informacji zachowało się z dzieciństwa i młodości Joanny Świtek, głównie ze względu na brak poruszania tego tematu przez Disco Babushkę za życia oraz ze względu na zagubienie źródeł w czasie przeprowadzki rodziny do Iznotii.</span></div>
-                    <img src="https://i.ibb.co/6DL08Wq/obraz-2024-04-21-144102562.png">
+                    <div class="article-tile-text"><span>Powstanie Ekwalijskie (1879-1882) – Zryw zbrojny mający miejsce w Ekwalii od 16 września 1879 roku do 20 kwietnia 1882 roku. Wojna ta zasłynęła wśród historyków jako jedna z „najbardziej interesujących i najbardziej krwawych” wojen w historii Maurazji. Była to także druga wojna, w której wojsko Stanów Zjednoczonych Fangei używało dynamitu do akcji dywersyjnych na szerszą skale.</span></div>
+                    <img src="https://i.ibb.co/7JHp6Wh/zd.png">
                 </div>
-                <div class="article-tile-description">Joanna „Disco Babushka” Świtek</div>
+                <div class="article-tile-description">Powstanie Ekwalijskie</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/greenpay/">
@@ -212,7 +212,7 @@
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
                     <div class="article-tile-text"><span>Greenpay Inc. – Lemburska spółka i organizacja członkowska zajmująca się wydawaniem kart płatniczych, powstała w 1961 roku pod nazwą Green Card. Greenpay Inc. zadebiutowała na Vounaria Chrematistirio w kwietniu 2006 roku. W październiku 2000 została natomiast wyodrębniona organizacja Greenpay Fangea, mająca charakter stowarzyszenia banków członkowskich i zachowująca wyłączną licencję na markę Greenpay na Fangei.</span></div>
-                    <img src="https://i.ibb.co/fxTTnsH/greenpay2.png">
+                    <img src="https://i.ibb.co/vsww0qF/karta-kredytowa.png">
                 </div>
                 <div class="article-tile-description">Greenpay</div>
             </div>
