--- a/wiki/index.html
+++ b/wiki/index.html
@@ -87,6 +87,10 @@
             <ul class="article-category">
                 <h1>Budynki</h1>
             </ul>
+            <ul class="article-category">
+                <h1>Tablice rejestracyjne</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/pameryjskie_tablice_rejestracyjne/">Pameryjskie tablice rejestracyjne</a></li>
+            </ul>
         </div>
     </main>
     <script src="/fangea/pageheader.js"></script>
