--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
                 <div class="article-tile-description">Port Złotice</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/cartland/">
+        <a href="https://grumqy.github.io/fangea/wiki/pameryjskie_tablice_rejestracyjne/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <img src="https://i.ibb.co/syMJDYS/obraz-2024-04-21-011526519.png">
-                    <div class="article-tile-text"><span>Cartland to firma zajmująca się sprzedażą detaliczną żywności z siedzibą w Wernie. Prowadzi 450 placówek i jest reprezentowana w siedmiu innych krajach oprócz Montecydji. Ten pełnozakresowy detalista spożywczy jest spółką niezależną. W okresie późnych lat dwutysięcznych Robert Korgen założył przedsiębiorstwo o nazwie „Carteunland Werno”, które w 2023 roku zostało przekształcone w „Cartland”. Spółka ta przekształciła się w dynamiczną hurtownię spożywczą obsługującą region Dzisiejszej Zarwii.</span></div>
+                    <img src="https://i.ibb.co/zRsJZ4w/powiaty-kody-gotowe.png">
+                    <div class="article-tile-text"><span>Pameryjskie tablice rejestracyjne – tablice rejestracyjne używane w Pamercji. Jedna, dwie lub trzy pierwsze litery tworzą wyróżnik miejsca. Pierwsza litera oznacza województwo. Jedna lub dwie następne – powiat albo miasto na prawach powiatu. Po wyróżniku powiatu (a w przypadku tablic samochodowych zmniejszonych – województwa) następuje wyróżnik pojazdu. Nie można w nim jednak stosować liter B, D, I, O, Z, zbyt podobnych do cyfr 8, 0, 1, 0, 2. Numery są zapisywane krojem pisma Arklatrs.</span></div>
                 </div>
-                <div class="article-tile-description">Cartland</div>
+                <div class="article-tile-description">Pameryjskie tablice rejestracyjne</div>
             </div>
         </a>
             <a href="https://grumqy.github.io/fangea/wiki/montecydia/">
@@ -103,7 +103,7 @@
                 <div class="article-tile-description">Montecydia</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/richteryzm/">
+        <a href="https://grumqy.github.io/fangea/wiki/stany_zjednoczone/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
