--- a/wiki/pameryjskie_tablice_rejestracyjne/index.html
+++ b/wiki/pameryjskie_tablice_rejestracyjne/index.html
@@ -6,9 +6,9 @@
 <title>Pameryjskie tablice rejestracyjne - Fangea i inne kontynenty</title>
 <meta property="og:title" content="Pameryjskie tablice rejestracyjne">
 <meta name="twitter:title" content="Pameryjskie tablice rejestracyjne">
-<meta name="description" content="Pameryjskie tablice rejestracyjne – tablice rejestracyjne używane w Pamercji. Jedna, dwie lub trzy pierwsze litery tworzą wyróżnik miejsca. Pierwsza litera oznacza województwo. Jedna lub dwie następne – powiat albo miasto na prawach powiatu. Po wyróżniku powiatu (a w przypadku tablic samochodowych zmniejszonych – województwa) następuje wyróżnik pojazdu. Nie można w nim jednak stosować liter B, D, ">
-<meta property="og:description" content="Pameryjskie tablice rejestracyjne – tablice rejestracyjne używane w Pamercji. Jedna, dwie lub trzy pierwsze litery tworzą wyróżnik miejsca. Pierwsza litera oznacza województwo. Jedna lub dwie następne – powiat albo miasto na prawach powiatu. Po wyróżniku powiatu (a w przypadku tablic samochodowych zmniejszonych – województwa) następuje wyróżnik pojazdu. Nie można w nim jednak stosować liter B, D, ">
-<meta name="twitter:description" content="Pameryjskie tablice rejestracyjne – tablice rejestracyjne używane w Pamercji. Jedna, dwie lub trzy pierwsze litery tworzą wyróżnik miejsca. Pierwsza litera oznacza województwo. Jedna lub dwie następne – powiat albo miasto na prawach powiatu. Po wyróżniku powiatu (a w przypadku tablic samochodowych zmniejszonych – województwa) następuje wyróżnik pojazdu. Nie można w nim jednak stosować liter B, D, ">
+<meta name="description" content="Pameryjskie tablice rejestracyjne – tablice rejestracyjne używane w Pamercji. Wyróżnia się dziewięć rodzajów tablic rejestracyjnych: Jedna, dwie lub trzy pierwsze litery tworzą wyróżnik miejsca. Pierwsza litera oznacza województwo. Jedna lub dwie następne – powiat albo miasto na prawach powiatu. Po wyróżniku powiatu (a w przypadku tablic samochodowych zmniejszonych – województwa) następuje wyróżni">
+<meta property="og:description" content="Pameryjskie tablice rejestracyjne – tablice rejestracyjne używane w Pamercji. Wyróżnia się dziewięć rodzajów tablic rejestracyjnych: Jedna, dwie lub trzy pierwsze litery tworzą wyróżnik miejsca. Pierwsza litera oznacza województwo. Jedna lub dwie następne – powiat albo miasto na prawach powiatu. Po wyróżniku powiatu (a w przypadku tablic samochodowych zmniejszonych – województwa) następuje wyróżni">
+<meta name="twitter:description" content="Pameryjskie tablice rejestracyjne – tablice rejestracyjne używane w Pamercji. Wyróżnia się dziewięć rodzajów tablic rejestracyjnych: Jedna, dwie lub trzy pierwsze litery tworzą wyróżnik miejsca. Pierwsza litera oznacza województwo. Jedna lub dwie następne – powiat albo miasto na prawach powiatu. Po wyróżniku powiatu (a w przypadku tablic samochodowych zmniejszonych – województwa) następuje wyróżni">
 <meta property="og:image" content="https://i.ibb.co/Kwb1zQ6/pamercjaplate.png">
 <meta name="twitter:image" content="https://i.ibb.co/Kwb1zQ6/pamercjaplate.png">
 <meta property="og:image:width" content="6380">
@@ -29,6 +29,7 @@
 </nav>
 <article>
 <header><div>Pameryjskie tablice rejestracyjne</div><span>20.09.2024</span></header>
+
 <figure class="right"><img src="https://i.ibb.co/Kwb1zQ6/pamercjaplate.png" alt="Tablica rejestracyjna zwyczajna używana w Pamercji – wzór wydawany od 4 lipca 2001"><figcaption>Tablica rejestracyjna zwyczajna używana w Pamercji – wzór wydawany od 4 lipca 2001</figcaption></figure>
 
 <p><b>Pameryjskie tablice rejestracyjne</b> – tablice rejestracyjne używane w Pamercji.</p>
@@ -38,6 +39,8 @@
 <figure class="right"><img src="https://i.ibb.co/zRsJZ4w/powiaty-kody-gotowe.png" alt="Oznaczenia tablic rejestracyjnych według powiatów"><figcaption>Oznaczenia tablic rejestracyjnych według powiatów</figcaption></figure>
 
 <h1>Opis systemu tablic rejestracyjnych w Pamercji </h1>
+<p>Wyróżnia się dziewięć rodzajów tablic rejestracyjnych:</p>
+
 <ul><li>zwyczajne</li>
 <li>indywidualne</li>
 <li>tymczasowe</li>
@@ -74,7 +77,8 @@
 <li>II zasób – 2 litery + 4 cyfry (od 0001 do 9999) + 1 litera – <b>199 980 kombinacji</b> (np. XY 1234A)</li>
 <li>III zasób – 2 litery + 3 cyfry (od 001 do 999) + 2 litery – <b>399 600 kombinacji</b> (np. XY 123AB)</li>
 <li>IV zasób – 2 litery + 1 cyfra + 1 litera + 3 cyfry (od 001 do 999) – <b>179 820 kombinacji</b> (np. XY 1A234); pierwszą cyfrą nie może być 0</li>
-<li>V zasób – 2 litery + 1 cyfra + 2 litery + 2 cyfry (od 01 do 99) – <b>356 400 kombinacji</b> (np. XY 1AB23); pierwszą cyfrą nie może być 0</li></ul>Łączna pojemność rejestracyjna – <b>1 235 799 kombinacji</b> dla każdego z dwuliterowych wyróżników.
+<li>V zasób – 2 litery + 1 cyfra + 2 litery + 2 cyfry (od 01 do 99) – <b>356 400 kombinacji</b> (np. XY 1AB23); pierwszą cyfrą nie może być 0</li></ul>
+<p>Łączna pojemność rejestracyjna – <b>1 235 799 kombinacji</b> dla każdego z dwuliterowych wyróżników.</p>
 
 <p>Powyższe zasoby są stosowane wyłącznie na tablicach samochodowych i przyczepowych.</p>
 
@@ -90,7 +94,8 @@
 <li>VIII zasób – 3 litery + 4 cyfry (od 0001 do 9999) + 1 litera – <b>199 980 kombinacji</b> (np. XYZ 1234A)</li>
 <li>IX zasób – 3 litery + 3 cyfry (od 001 do 999) + 2 litery – <b>399 600 kombinacji</b> (np. XYZ 123AC)</li>
 <li>X zasób – 3 litery + 1 litera + 2 cyfry (od 01 do 99) + 1 litera – <b>39 600 kombinacji</b> (np. XYZ A12C)</li>
-<li>XI zasób – 3 litery + 1 litera + 1 cyfra + 2 litery – <b>72 000 kombinacji</b> (np. XYZ A1CE); cyfrą nie może być 0</li></ul>Łączna pojemność rejestracyjna – <b>978 399 kombinacji</b> dla każdego z trzyliterowych wyróżników. Oprócz tego niektóre powiaty wydawały oficjalnie nieprzewidziany zasób 3 litery + 3 cyfry + 1 litera (np. XYZ 123A).
+<li>XI zasób – 3 litery + 1 litera + 1 cyfra + 2 litery – <b>72 000 kombinacji</b> (np. XYZ A1CE); cyfrą nie może być 0</li></ul>
+<p>Łączna pojemność rejestracyjna – <b>978 399 kombinacji</b> dla każdego z trzyliterowych wyróżników. Oprócz tego niektóre powiaty wydawały oficjalnie nieprzewidziany zasób 3 litery + 3 cyfry + 1 litera (np. XYZ 123A).</p>
 
 <p>Zasoby od I do VI są stosowane na wszystkich tablicach zwyczajnych, od VII do IX – wyłącznie na tablicach samochodowych i przyczepowych, a X i XI – wyłącznie na tablicach motocyklowych.</p>
 
@@ -101,7 +106,8 @@
 <li>IV zasób – 1 litera + 1 litera + 2 cyfry (od 01 do 99) – <b>1980 kombinacji</b> (np. X A12)</li>
 <li>V zasób – 1 litera + 1 cyfra + 2 litery – <b>3600 kombinacji</b> (np. X 1AC); cyfrą nie może być 0</li>
 <li>VI zasób – 1 litera + 2 litery + 1 cyfra – <b>3600 kombinacji</b> (np. X AC1); cyfrą nie może być 0</li>
-<li>VII zasób – 1 litera + 1 litera + 1 cyfra + 1 litera – <b>3600 kombinacji</b> (np. X A1C); cyfrą nie może być 0</li></ul>Łączna pojemność rejestracyjna – <b>17 379 kombinacji</b> dla każdego wyróżnika województwa.
+<li>VII zasób – 1 litera + 1 litera + 1 cyfra + 1 litera – <b>3600 kombinacji</b> (np. X A1C); cyfrą nie może być 0</li></ul>
+<p>Łączna pojemność rejestracyjna – <b>17 379 kombinacji</b> dla każdego wyróżnika województwa.</p>
 
 <h1>Wyróżniki województw</h1>
 <p><b>Tablice zwyczajne</b></p>
@@ -287,7 +293,8 @@
 
 <h1>Historyczne tablice rejestracyjne</h1>
 <p>...</p>
- <div id="source-code" style="display:none;">[[img:https://i.ibb.co/Kwb1zQ6/pamercjaplate.png|right|Tablica rejestracyjna zwyczajna używana w Pamercji – wzór wydawany od 4 lipca 2001]]
+ <div id="source-code" style="display:none;">
+[[img:https://i.ibb.co/Kwb1zQ6/pamercjaplate.png|right|Tablica rejestracyjna zwyczajna używana w Pamercji – wzór wydawany od 4 lipca 2001]]
 
 '''Pameryjskie tablice rejestracyjne''' – tablice rejestracyjne używane w Pamercji.
 
@@ -296,6 +303,8 @@
 [[img:https://i.ibb.co/zRsJZ4w/powiaty-kody-gotowe.png|right|Oznaczenia tablic rejestracyjnych według powiatów]]
 
 = Opis systemu tablic rejestracyjnych w Pamercji  =
+
+Wyróżnia się dziewięć rodzajów tablic rejestracyjnych:
 
 * zwyczajne
 * indywidualne
@@ -339,6 +348,7 @@ Od 8 września 2014 roku do oznaczania pojazdów silnikowych posiadających zmni
 * III zasób – 2 litery + 3 cyfry (od 001 do 999) + 2 litery – '''399 600 kombinacji''' (np. XY 123AB)
 * IV zasób – 2 litery + 1 cyfra + 1 litera + 3 cyfry (od 001 do 999) – '''179 820 kombinacji''' (np. XY 1A234); pierwszą cyfrą nie może być 0
 * V zasób – 2 litery + 1 cyfra + 2 litery + 2 cyfry (od 01 do 99) – '''356 400 kombinacji''' (np. XY 1AB23); pierwszą cyfrą nie może być 0
+
 Łączna pojemność rejestracyjna – '''1 235 799 kombinacji''' dla każdego z dwuliterowych wyróżników.
 
 Powyższe zasoby są stosowane wyłącznie na tablicach samochodowych i przyczepowych.
@@ -356,6 +366,7 @@ Powyższe zasoby są stosowane wyłącznie na tablicach samochodowych i przyczep
 * IX zasób – 3 litery + 3 cyfry (od 001 do 999) + 2 litery – '''399 600 kombinacji''' (np. XYZ 123AC)
 * X zasób – 3 litery + 1 litera + 2 cyfry (od 01 do 99) + 1 litera – '''39 600 kombinacji''' (np. XYZ A12C)
 * XI zasób – 3 litery + 1 litera + 1 cyfra + 2 litery – '''72 000 kombinacji''' (np. XYZ A1CE); cyfrą nie może być 0
+
 Łączna pojemność rejestracyjna – '''978 399 kombinacji''' dla każdego z trzyliterowych wyróżników. Oprócz tego niektóre powiaty wydawały oficjalnie nieprzewidziany zasób 3 litery + 3 cyfry + 1 litera (np. XYZ 123A).
 
 Zasoby od I do VI są stosowane na wszystkich tablicach zwyczajnych, od VII do IX – wyłącznie na tablicach samochodowych i przyczepowych, a X i XI – wyłącznie na tablicach motocyklowych.
@@ -369,6 +380,7 @@ Zasoby od I do VI są stosowane na wszystkich tablicach zwyczajnych, od VII do I
 * V zasób – 1 litera + 1 cyfra + 2 litery – '''3600 kombinacji''' (np. X 1AC); cyfrą nie może być 0
 * VI zasób – 1 litera + 2 litery + 1 cyfra – '''3600 kombinacji''' (np. X AC1); cyfrą nie może być 0
 * VII zasób – 1 litera + 1 litera + 1 cyfra + 1 litera – '''3600 kombinacji''' (np. X A1C); cyfrą nie może być 0
+
 Łączna pojemność rejestracyjna – '''17 379 kombinacji''' dla każdego wyróżnika województwa.
 
 = Wyróżniki województw =
