--- a/wiki/pameryjskie_tablice_rejestracyjne/index.html
+++ b/wiki/pameryjskie_tablice_rejestracyjne/index.html
@@ -162,7 +162,8 @@
 <p><b>Tablice tymczasowe</b> mają białe tło i czerwone znaki i są wydawane dla pojazdów rejestrowanych czasowo. Do września 2002 r. były obowiązkowe przy zmianie właściciela pojazdu. Obecnie wydaje się je tylko na wniosek właściciela. Układ znaków może być dwojaki:</p>
 
 <ul><li>I zasób – 1 litera + 1 cyfra + 4 cyfry (od 0001 do 9999)</li>
-<li>II zasób – 1 litera + 1 cyfra + 3 cyfry (od 001 do 999) + 1 litera; jeżeli litera B – tablice badawcze, w tym przypadku litera jest oddzielona spacją)</li></ul>W przypadku tablic samochodowych zmniejszonych stosuje się ten sam zestaw znaków, co na tablicach zwyczajnych.
+<li>II zasób – 1 litera + 1 cyfra + 3 cyfry (od 001 do 999) + 1 litera; jeżeli litera B – tablice badawcze, w tym przypadku litera jest oddzielona spacją)</li></ul>
+<p>W przypadku tablic samochodowych zmniejszonych stosuje się ten sam zestaw znaków, co na tablicach zwyczajnych.</p>
 
 <h2>Tablice indywidualne</h2>
 <figure class="right"><img src="https://i.ibb.co/0hxGKCz/pamercjaplateindywidualna.png" alt="Tablica rejestracyjna indywidualna"><figcaption>Tablica rejestracyjna indywidualna</figcaption></figure>
@@ -444,6 +445,7 @@ Tak jak na tablicach samochodowych od I do VI zasobu oraz zasoby X i XI.
 
 * I zasób – 1 litera + 1 cyfra + 4 cyfry (od 0001 do 9999)
 * II zasób – 1 litera + 1 cyfra + 3 cyfry (od 001 do 999) + 1 litera; jeżeli litera B – tablice badawcze, w tym przypadku litera jest oddzielona spacją)
+
 W przypadku tablic samochodowych zmniejszonych stosuje się ten sam zestaw znaków, co na tablicach zwyczajnych.
 
 == Tablice indywidualne ==
