--- a/wiki/pameryjskie_tablice_rejestracyjne/index.html
+++ b/wiki/pameryjskie_tablice_rejestracyjne/index.html
@@ -176,6 +176,7 @@
 <p><b>Tablice sportowe</b> obowiązują od 1 czerwca 2024 r. Są wydawane jako tablice tymczasowe do samochodów przeznaczonych do celów sportowych, czyli np. do wyścigów. Tego typu tablice mają czerwone tło, białe znaki oraz taki sam układ, jak w przypadku zwykłych tablic. Pojazdy wyposażone w takie tablice nie będą mogły uczestniczyć w codziennym ruchu drogowym.</p>
 
 <h2>Tablice dyplomatyczne</h2>
+<div class="uncomplete"></div>
 <figure class="right"><img src="https://i.ibb.co/9sNYTyr/pamercjaplatedyplomatyczna.png" alt="Tablica rejestracyjna pojazdu należącego do ambasady Stanów Zjednoczonych (kod 001)"><figcaption>Tablica rejestracyjna pojazdu należącego do ambasady Stanów Zjednoczonych (kod 001)</figcaption></figure>
 
 <p><b>Tablice dyplomatyczne</b> są wydawane dla pojazdów przedstawicielstw i misji dyplomatycznych i konsularnych państw obcych i organizacji międzynarodowych w Pamercji oraz ich personelu, korzystających z przywilejów i immunitetów dyplomatycznych.  Ewidencję tych tablic prowadzi wojewoda pomerański. Numer składa się z litery oznaczającej województwo (w praktyce używana jest tylko <b>L</b>) i 6 cyfr, z których pierwsze 3 są wyróżnikiem państwa lub organizacji, następne 3 określają przeznaczenie pojazdu.</p>
@@ -206,7 +207,8 @@
 
 <p>I zasób – dla pojazdów kołowych:</p>
 <ul><li>samochodowy – 2 litery (pierwsza <b>U</b>) + 5 cyfr (99 999 kombinacji)</li>
-<li>motocyklowy – 2 litery (pierwsza <b>U</b>) + 4 cyfry (9 999 kombinacji)</li></ul>II zasób – 2 litery (pierwsza <b>U</b>) + 4 cyfry + litera <b>T</b> – dla pojazdów gąsienicowych
+<li>motocyklowy – 2 litery (pierwsza <b>U</b>) + 4 cyfry (9 999 kombinacji)</li></ul>
+<p>II zasób – 2 litery (pierwsza <b>U</b>) + 4 cyfry + litera <b>T</b> – dla pojazdów gąsienicowych</p>
 
 <p><b>Podział pomiędzy rodzaje pojazdów na tablicach wojskowych:</b></p>
 
@@ -293,6 +295,7 @@
 <p>Nie są specjalnie wyróżniane – mają standardowe tablice rejestracyjne.</p>
 
 <h1>Historyczne tablice rejestracyjne</h1>
+<div class="uncomplete"></div>
 <p>...</p>
  <div id="source-code" style="display:none;">
 [[img:https://i.ibb.co/Kwb1zQ6/pamercjaplate.png|right|Tablica rejestracyjna zwyczajna używana w Pamercji – wzór wydawany od 4 lipca 2001]]
@@ -515,6 +518,7 @@ Istnieją dwa zasoby, z których tworzone są numery pojazdów wojskowych:
 I zasób – dla pojazdów kołowych:
 * samochodowy – 2 litery (pierwsza '''U''') + 5 cyfr (99 999 kombinacji)
 * motocyklowy – 2 litery (pierwsza '''U''') + 4 cyfry (9 999 kombinacji)
+
 II zasób – 2 litery (pierwsza '''U''') + 4 cyfry + litera '''T''' – dla pojazdów gąsienicowych
 
 '''Podział pomiędzy rodzaje pojazdów na tablicach wojskowych:'''
