--- a/wiki/pameryjskie_tablice_rejestracyjne/index.html
+++ b/wiki/pameryjskie_tablice_rejestracyjne/index.html
@@ -222,7 +222,8 @@
 <li><b>UI</b> – przyczepy transportowe</li>
 <li><b>UJ</b> – przyczepy specjalne</li>
 <li><b>UK</b> – motocykle</li>
-<li><b>UL</b> – pojazdy przyjmowane z gospodarki narodowej podczas mobilizacji (pojazdy posiadające obecnie „cywilne” numery rejestracyjne)</li></ul>Zasób II:
+<li><b>UL</b> – pojazdy przyjmowane z gospodarki narodowej podczas mobilizacji (pojazdy posiadające obecnie „cywilne” numery rejestracyjne)</li></ul>
+<p>Zasób II:</p>
 <ul><li><b>UA ....T</b> – czołgi</li>
 <li><b>UC ....T</b> – bojowe wozy piechoty</li>
 <li><b>UE ....T</b> – wozy zabezpieczenia technicznego</li>
@@ -253,7 +254,8 @@
 <ul><li>na tablicach pojazdów Policji – jednostkę rejestrującą</li>
 <li>na tablicach pojazdów Służby Celno-Skarbowej i Służby Celnej – izbę celną</li>
 <li>na tablicach pojazdów kontroli skarbowej – województwo</li>
-<li>na tablicach pojazdów pozostałych służb – część wyróżnika pojazdu</li></ul>Istnieją dwa zasoby, z których tworzone są numery pojazdów służb specjalnych:
+<li>na tablicach pojazdów pozostałych służb – część wyróżnika pojazdu</li></ul>
+<p>Istnieją dwa zasoby, z których tworzone są numery pojazdów służb specjalnych:</p>
 
 <p>I zasób – 3 litery (pierwsza <b>H</b>) + 1 litera + 3 cyfry</p>
 <p>II zasób – 3 litery (pierwsza <b>H</b>) + 2 cyfry + 2 litery</p>
@@ -295,7 +297,9 @@
 <p>Nie są specjalnie wyróżniane – mają standardowe tablice rejestracyjne.</p>
 
 <h1>Historyczne tablice rejestracyjne</h1>
+
 <div class="uncomplete"></div>
+ 
 <p>...</p>
  <div id="source-code" style="display:none;">
 [[img:https://i.ibb.co/Kwb1zQ6/pamercjaplate.png|right|Tablica rejestracyjna zwyczajna używana w Pamercji – wzór wydawany od 4 lipca 2001]]
@@ -534,6 +538,7 @@ Zasób I:
 * '''UJ''' – przyczepy specjalne
 * '''UK''' – motocykle
 * '''UL''' – pojazdy przyjmowane z gospodarki narodowej podczas mobilizacji (pojazdy posiadające obecnie „cywilne” numery rejestracyjne)
+
 Zasób II:
 * '''UA ....T''' – czołgi
 * '''UC ....T''' – bojowe wozy piechoty
@@ -569,6 +574,7 @@ Trzecia litera oznacza:
 * na tablicach pojazdów Służby Celno-Skarbowej i Służby Celnej – izbę celną
 * na tablicach pojazdów kontroli skarbowej – województwo
 * na tablicach pojazdów pozostałych służb – część wyróżnika pojazdu
+
 Istnieją dwa zasoby, z których tworzone są numery pojazdów służb specjalnych:
 
 I zasób – 3 litery (pierwsza '''H''') + 1 litera + 3 cyfry
