--- a/wiki/pameryjskie_tablice_rejestracyjne/index.html
+++ b/wiki/pameryjskie_tablice_rejestracyjne/index.html
@@ -272,7 +272,7 @@
 <li><b>HPD</b> Komenda Wojewódzka Policji w Dobrogrodzie</li>
 <li><b>HPG</b> Komenda Wojewódzka Policji w Lwich Górach</li>
 <li><b>HPK</b> Komenda Wojewódzka Policji w Krzęcinie</li>
-<li><b>HPM</b> Komenda Wojewódzka Policji w Mieliniu</li>
+<li><b>HPM</b> Komenda Wojewódzka Policji w Mielinie</li>
 <li><b>HPN</b> Komenda Wojewódzka Policji w Łańsku</li>
 <li><b>HPO</b> Komenda Wojewódzka Policji w Koźlaczkach</li>
 <li><b>HPR</b> Komenda Wojewódzka Policji w Arturowie Pawełeckim</li>
@@ -287,7 +287,7 @@
 <li><b>HCG</b> Urząd Celno-Skarbowy w Lwich Górach</li>
 <li><b>HCK</b> Urząd Celno-Skarbowy w Krzęcinie</li>
 <li><b>HCL</b> Urząd Celno-Skarbowy w Lipławiecku</li>
-<li><b>HCM</b> Urząd Celno-Skarbowy w Mieliniu</li>
+<li><b>HCM</b> Urząd Celno-Skarbowy w Mielinie</li>
 <li><b>HCN</b> Urząd Celno-Skarbowy w Łańsku</li>
 <li><b>HCO</b> Urząd Celno-Skarbowy w Koźlaczkach</li>
 <li><b>HCR</b> Urząd Celno-Skarbowy w Arturowie Pawełeckim</li>
@@ -297,9 +297,7 @@
 <p>Nie są specjalnie wyróżniane – mają standardowe tablice rejestracyjne.</p>
 
 <h1>Historyczne tablice rejestracyjne</h1>
-
 <div class="uncomplete"></div>
- 
 <p>...</p>
  <div id="source-code" style="display:none;">
 [[img:https://i.ibb.co/Kwb1zQ6/pamercjaplate.png|right|Tablica rejestracyjna zwyczajna używana w Pamercji – wzór wydawany od 4 lipca 2001]]
@@ -592,7 +590,7 @@ Pojazdy nieoznakowane służb mogą mieć zamiast tablic specjalnych tablice zwy
 * '''HPD''' Komenda Wojewódzka Policji w Dobrogrodzie
 * '''HPG''' Komenda Wojewódzka Policji w Lwich Górach
 * '''HPK''' Komenda Wojewódzka Policji w Krzęcinie
-* '''HPM''' Komenda Wojewódzka Policji w Mieliniu
+* '''HPM''' Komenda Wojewódzka Policji w Mielinie
 * '''HPN''' Komenda Wojewódzka Policji w Łańsku
 * '''HPO''' Komenda Wojewódzka Policji w Koźlaczkach
 * '''HPR''' Komenda Wojewódzka Policji w Arturowie Pawełeckim
@@ -608,7 +606,7 @@ Pojazdy nieoznakowane służb mogą mieć zamiast tablic specjalnych tablice zwy
 * '''HCG''' Urząd Celno-Skarbowy w Lwich Górach
 * '''HCK''' Urząd Celno-Skarbowy w Krzęcinie
 * '''HCL''' Urząd Celno-Skarbowy w Lipławiecku
-* '''HCM''' Urząd Celno-Skarbowy w Mieliniu
+* '''HCM''' Urząd Celno-Skarbowy w Mielinie
 * '''HCN''' Urząd Celno-Skarbowy w Łańsku
 * '''HCO''' Urząd Celno-Skarbowy w Koźlaczkach
 * '''HCR''' Urząd Celno-Skarbowy w Arturowie Pawełeckim
